# treinamento_Yolo_Bolas_tenis

./: .gitignore  pyproject.toml
dataset_bolatenis/: data.yaml
notebooks/: 09-prof-saulo-treinamento-customizado-yolo.ipynb  10-prof-saulo-treinamento-yolo.ipynb  11-prof-saulo-inferencia-yolo.ipynb
notebooks/runs/detect/predict-6/: tenis.avi
notebooks/runs/detect/train/: args.yaml
notebooks/runs/detect/train-2/: args.yaml
notebooks/runs/detect/train-3/: args.yaml
notebooks/runs/detect/train-4/: args.yaml
notebooks/runs/detect/train-5/: args.yaml
notebooks/runs/detect/train-6/: args.yaml
notebooks/runs/detect/train-7/: args.yaml  results.csv
